[gd_scene load_steps=2 format=3 uid="uid://bluepc4ci5xdu"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_3xc6u"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_3xc6u")

[node name="TimeLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 24
text = "Time: 0s"
metadata/_edit_use_anchors_ = true

[node name="UserTimeLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.353
anchor_right = 0.5
anchor_bottom = 0.353
offset_left = -528.0
offset_top = -212.744
offset_right = 528.0
offset_bottom = -12.744
theme_override_colors/font_color = Color(0.819976, 0.414339, 1, 0.815686)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = 148.0
offset_right = 71.0
offset_bottom = 179.0
grow_horizontal = 2
grow_vertical = 2
text = "Zagraj jeszcze raz"

[node name="BestTimeLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_right = -1.0
offset_bottom = 34.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "BestTime: 0s"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true
